--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <h3>
 <a id="of-monsters-and-men" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p></p>
 
 <h3>
 <a id="imagine-dragons" 
@@ -42,7 +42,13 @@ aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span>
 <h3>
 <a id="ed-sheeran" class="anchor" href="#ed-sheeran" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p> </p>
+<p>Hozier's breakout hit Take Me to Church features in the top ten songs that have been searched most often on Shazam.
+
+The popular app helps music fans find out the title and artist of an unfamiliar or forgotten song by taking a sample and searching through its database for a match.
+
+Shazam decided to compile its own Hall of Fame, listing the songs that have been the most searched on their app.
+
+Hozier is the sole Irish representative in the top ten, in eighth place with almost 16 million searches. </p>
 
       <footer class="site-footer">
 
