--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
   
     <section class="page-header">
+      //title
       <h1 class="project-name">Summer Festival</h1>
       <h2 class="project-tagline"></h2>
     </section>
@@ -53,6 +54,10 @@ aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span>
 
     </section>
 
+<section>
+  <h1>Location</h1>
+  <p> the location is yet to be decided </p>
+</section>
   
   </body>
 </html>
