--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-  
+  <a href="page2">link text</a>
     <section class="page-header">
       //title
       <h1 class="project-name">Summer Festival</h1>
