--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       //title
       <h1 class="project-name">Summer Festival</h1>
       <h2 class="project-tagline"></h2>
+       <ul>
+      <li><a href="#">About Me</a></li>
+      <li><a href="#">Best Poems</a></li>
+      <li><a href="#">Worst Poems</a></li>
+    </ul>
     </section>
 
     <section class="artist-lineup">
