--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Summer Festival</h1>
       <h2 class="project-tagline"></h2>
+      <a href="page2">link text</a>
        <ul>
       <li><a href="#">About Me</a></li>
       <li><a href="#">Best Poems</a></li>
