--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Summer Festival</title>
+    <title>Irish Desitination</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -15,41 +15,35 @@
       <h2 class="project-tagline"></h2>
       <a href="page2">link text</a>
        <ul>
-      <li><a href="#">About Me</a></li>
-      <li><a href="#">Best Poems</a></li>
-      <li><a href="#">Worst Poems</a></li>
+      <li><a href="#">Travel</a></li>
+      <li><a href="#">Most Scenic</a></li>
+      <li><a href="#">Top Ten</a></li>
     </ul>
     </section>
 
-    <section class="artist-lineup">
+    <section class="Most Popular Irish Desitinations">
       <h3>
-<a id="artists-lineup" class="anchor" href="#artists-lineup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Artists Lineup.</h3>
+<a id="irish-desitination" class="anchor" href="#irish-desitination" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Achill Island.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="hozier" class="anchor" href="#hozier" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hoizer</h3>
-
-<p>Irish musician, singer and songwriter from Bray, County Wicklow.Hozier's breakout hit Take Me to Church features in the top ten songs that have been searched most often on Shazam.
-The popular app helps music fans find out the title and artist of an unfamiliar or forgotten song by taking a sample and searching through its database for a match. Shazam decided to compile its own Hall of Fame, listing the songs that have been the most searched on their app.Hozier is the sole Irish representative in the top ten, in eighth place with almost 16 million searches.</p>
+<p>Achill Island lies off County Mayo on the west coast of the Republic of Ireland. Marked by rugged mountains and peat bogs, the island is known for its tall sea cliffs and clean beaches. Its breezy shoreline makes it a popular spot for water sports. The strand (beach) at Keem Bay inspired visiting writers Heinrich Böll and Graham Greene. Keel, the island's main village, has a sandy surf beach</p>
 
 <h3>
-<a id="of-monsters-and-men" class="anchor" href="#of-monsters-and-men" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Of Monsters and Men</h3>
+<a id="Kerry" class="anchor" href="#kerry" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Ring Of Kerry</h3>
 
-<p></p>
+<p>The Ring of Kerry is a scenic drive around the Iveragh Peninsula in southwest Ireland’s County Kerry. Its 179km-long, circular route takes in rugged and verdant coastal landscapes and rural seaside villages. Skellig Michael, a rocky island with an abandoned 7th-century Christian monastery, is a major destination point, with boats from Portmagee making the 12km crossing during the warmer months.</p>
 
 <h3>
-<a id="imagine-dragons" 
+<a id="cliffs-of-moher" class="anchor" href="#cliffs-of-moher" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Cliffs Of Moher</h3>
+
+<p>The cliffs take their name from an old fort called Moher, which once stood on Hag's Head, the southernmost point of the cliffs.The cliffs are one of the most popular tourist destinations in Ireland and topped the list of attractions in 2006 by drawing almost one million visitors.In the 1990s, Clare County Council initiated development plans to enable visitors to experience the cliffs without significant intrusive man-made amenities. In keeping with this approach, the Cliffs of Moher Visitor Experience was built into a hillside approaching the cliffs. The centre is also intended to be environmentally sensitive in its use of renewable energy systems including geothermal heating and cooling, solar panels, and grey water recycling. </p>
+
+<h3>
+<a id="the-giants-causeway" 
 class="anchor" 
-href="#imagine-dragons" 
-aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Imagine Dragons</h3>
+href="#the-giants-causeway" 
+aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Giants Causeway</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="ed-sheeran" class="anchor" href="#ed-sheeran" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ed Sheeran</h3>
-
-<p> </p>
+<p>Northern Ireland's only UNESCO World Heritage-listed site, the Giant's Causeway is proof that Mother Nature provides the most dramatic tourist attractions. The natural wonder is comprised of around 40,000 polygonal basalt rock columns, formed by the ancient volcanic landscape and stretching along the coastline like a series of gigantic stepping stones. A Giants Causeway Day Trip from Belfast is one of the country's most popular excursions, with visitors taking the unique opportunity to walk one of nature's most peculiar pathways.</p>
 
 <section>
   <h1>Location</h1>
