--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Summer Festival</h1>
+      <h1 class="project-name">Irish Destinations</h1>
       <h2 class="project-tagline"></h2>
       <a href="page2">link text</a>
        <ul>
@@ -22,15 +22,23 @@
     </section>
 
     <section class="Most Popular Irish Desitinations">
+    	
+   <div class="first">
       <h3>
 <a id="irish-desitination" class="anchor" href="#irish-desitination" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Achill Island.</h3>
 
 <p>Achill Island lies off County Mayo on the west coast of the Republic of Ireland. Marked by rugged mountains and peat bogs, the island is known for its tall sea cliffs and clean beaches. Its breezy shoreline makes it a popular spot for water sports. The strand (beach) at Keem Bay inspired visiting writers Heinrich Böll and Graham Greene. Keel, the island's main village, has a sandy surf beach</p>
 
+</div>
+
+
+
 <h3>
 <a id="Kerry" class="anchor" href="#kerry" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Ring Of Kerry</h3>
 
 <p>The Ring of Kerry is a scenic drive around the Iveragh Peninsula in southwest Ireland’s County Kerry. Its 179km-long, circular route takes in rugged and verdant coastal landscapes and rural seaside villages. Skellig Michael, a rocky island with an abandoned 7th-century Christian monastery, is a major destination point, with boats from Portmagee making the 12km crossing during the warmer months.</p>
+
+
 
 <h3>
 <a id="cliffs-of-moher" class="anchor" href="#cliffs-of-moher" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Cliffs Of Moher</h3>
