--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="page-header">
       <h1 class="project-name">Irish Destinations</h1>
       <h2 class="project-tagline"></h2>
-      <a href="page2">link text</a>
+      <a href="https://www.facebook.com/Ireland/">Like us on Facebook!</a>
        <ul>
       <li><a href="#">Travel</a></li>
       <li><a href="#">Most Scenic</a></li>
