--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <section class="page-header">
       <h1 class="project-name">Irish Destinations</h1>
       <h2 class="project-tagline"></h2>
+      <img src="facebooklogo.png"/>
       <a href="https://www.facebook.com/Ireland/">Like us on Facebook!</a>
        <ul>
       <li><a href="#">Map Of Ireland</a></li>
