--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <img src="facebooklogo.png"/>
       <a href="https://www.facebook.com/Ireland/">Like us on Facebook!</a>
        <ul>
-      <li><a href="#">Map Of Ireland</a></li>
-      <li><a href="#"></a>History Of Ireland</li>
+      <li><a href="https://www.google.co.uk/maps?q=ireland&um=1&ie=UTF-8&sa=X&ved=0ahUKEwjusLqzv63LAhWkDZoKHbBmDy8Q_AUIBygB">Map Of Ireland</a></li>
       <li><a href="#">Ten Most popular</a></li>
     </ul>
     </section>
