--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Irish Destinations</h1>
+      <h4>Irelands Most Popular Destinations</h4>
       <h2 class="project-tagline"></h2>
       <img src="facebooklogo.png"/>
       <a href="https://www.facebook.com/Ireland/">Like us on Facebook!</a>
