--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
 <p>Northern Ireland's only UNESCO World Heritage-listed site, the Giant's Causeway is proof that Mother Nature provides the most dramatic tourist attractions. The natural wonder is comprised of around 40,000 polygonal basalt rock columns, formed by the ancient volcanic landscape and stretching along the coastline like a series of gigantic stepping stones. A Giants Causeway Day Trip from Belfast is one of the country's most popular excursions, with visitors taking the unique opportunity to walk one of nature's most peculiar pathways.</p>
 <div>
   
+  <div class="footer">
+    <p>Contact Information 
+    Aileen-rose Brolly
+    Email: abrolly03@qub.ac.uk</p>
+  </div>
+  
   <script>
 $("div").on('click', function() {
   $(this).toggleClass('show-description');
