--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="Most Popular Irish Desitinations">
 
-   <div class="first">
+   <div class="first show-description">
       <h3>
 <a id="irish-desitination" class="anchor" href="#irish-desitination" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Achill Island.</h3>
 
@@ -37,21 +37,21 @@
 </div>
 
 
-<div class="second">
+<div class="second show-description">
 <h3>
 <a id="Kerry" class="anchor" href="#kerry" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Ring Of Kerry</h3>
 
 <p>The Ring of Kerry is a scenic drive around the Iveragh Peninsula in southwest Ireland’s County Kerry. Its 179km-long, circular route takes in rugged and verdant coastal landscapes and rural seaside villages. Skellig Michael, a rocky island with an abandoned 7th-century Christian monastery, is a major destination point, with boats from Portmagee making the 12km crossing during the warmer months.</p>
 </div>
 
-<div class="third">
+<div class="third show-description">
 <h3>
 <a id="cliffs-of-moher" class="anchor" href="#cliffs-of-moher" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Cliffs Of Moher</h3>
 
 <p>The cliffs take their name from an old fort called Moher, which once stood on Hag's Head, the southernmost point of the cliffs.The cliffs are one of the most popular tourist destinations in Ireland and topped the list of attractions in 2006 by drawing almost one million visitors.In the 1990s, Clare County Council initiated development plans to enable visitors to experience the cliffs without significant intrusive man-made amenities. In keeping with this approach, the Cliffs of Moher Visitor Experience was built into a hillside approaching the cliffs. The centre is also intended to be environmentally sensitive in its use of renewable energy systems including geothermal heating and cooling, solar panels, and grey water recycling. </p>
 </div>
 
-<div class="fourth">
+<div class="fourth show-description">
 <h3>
 <a id="the-giants-causeway" class="anchor" href="#the-giants-causeway" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Giants Causeway</h3>
 
