--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     </section>
 
     <section class="Most Popular Irish Desitinations">
+      <form action="action_page.php">
+  First name:<br>
+  <input type="text" name="Email" value="Email"><br>
+  Last name:<br>
+  <input type="text" name="Password" value="Password"><br><br>
+  <input type="submit" value="Sign up">
+</form>
 
    <div class="first show-description">
       <h3>
