--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
     <section class="Most Popular Irish Desitinations">
       
       <form action="action_page.php">
+        <p>Sign up to our newsletter to get weekly updates or recent news</p>
   First name:<br>
-  <input type="text" name="Email" value="Email"><br>
-  Last name:<br>
-  <input type="text" name="Password" value="Password"><br><br>
-  <input type="submit" value="Sign up">
+  <input type="text" name="Email" value="Email"><br> Last name:<br><input type="text" name="Password" value="Password"><br><br> <input type="submit" value="Sign up">
 </form>
 
    <div class="first show-description">
