--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="/assets/jquery.js"></script>
     <meta charset="UTF-8">
-    <title>Irish Desitination</title>
+    <title>Irish Destination</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
@@ -22,7 +22,7 @@
       <a href="https://www.facebook.com/Ireland/">Like us on Facebook!</a>
        <ul>
       <li><a href="https://www.google.co.uk/maps?q=ireland&um=1&ie=UTF-8&sa=X&ved=0ahUKEwjusLqzv63LAhWkDZoKHbBmDy8Q_AUIBygB">Map Of Ireland</a></li>
-      <li><a href="#">Ten Most popular</a></li>
+      <li><a href="#">Top Ten Destinstions</a></li>
     </ul>
     </section>
 
@@ -65,6 +65,20 @@
 <div>
   </section>
   <div class="footer">
+    
+    <table style="width:100%">
+      <caption>Contact Information</caption>
+  <tr>
+    <th>Name</th>
+    <th>Email</th> 
+    <th>StudentNum</th>
+  </tr>
+  <tr>
+    <td>Aileen</td>
+    <td>abrolly@qub.ac.uk</td> 
+    <td>40152281</td>
+  </tr>
+</table>
     <p>Contact Information 
     Aileen-rose Brolly
     Email: abrolly03@qub.ac.uk</p>
