--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="Most Popular Irish Desitinations">
       
       <form action="action_page.php">
-        <p>Sign up to our newsletter to get weekly updates or recent news</p>
+        <h5>Sign up to our newsletter to get weekly updates or recent news</h5>
   First name:<br>
   <input type="text" name="Email" value="Email"><br> Last name:<br><input type="text" name="Password" value="Password"><br><br> <input type="submit" value="Sign up">
 </form>
@@ -79,9 +79,7 @@
     <td>40152281</td>
   </tr>
 </table>
-    <p>Contact Information 
-    Aileen-rose Brolly
-    Email: abrolly03@qub.ac.uk</p>
+    
   </div>
   
   <script>
