--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
   <tr>
     <th>Name</th>
     <th>Email</th> 
-    <th>StudentNum</th>
+    <th>Student Number</th>
   </tr>
   <tr>
-    <td>Aileen</td>
+    <td>Aileen-Rose</td>
     <td>abrolly@qub.ac.uk</td> 
     <td>40152281</td>
   </tr>
