--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 <h3>
 <a id="cliffs-of-moher" class="anchor" href="#cliffs-of-moher" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Cliffs Of Moher</h3>
 
-<p>The cliffs take their name from an old fort called Moher, which once stood on Hag's Head, the southernmost point of the cliffs.The cliffs are one of the most popular tourist destinations in Ireland and topped the list of attractions in 2006 by drawing almost one million visitors.In the 1990s, Clare County Council initiated development plans to enable visitors to experience the cliffs without significant intrusive man-made amenities. In keeping with this approach, the Cliffs of Moher Visitor Experience was built into a hillside approaching the cliffs. The centre is also intended to be environmentally sensitive in its use of renewable energy systems including geothermal heating and cooling, solar panels, and grey water recycling. </p>
+<p>The cliffs take their name from an old fort called Moher, which once stood on Hag's Head, the southernmost point of the cliffs.The cliffs are one of the most popular tourist destinations in Ireland and topped the list of attractions in 2006 by drawing almost one million visitors.In the 1990s, Clare County Council initiated development plans to enable visitors to experience the cliffs without significant intrusive man-made amenities.  </p>
 </div>
 
 <div class="fourth show-description">
 <h3>
 <a id="the-giants-causeway" class="anchor" href="#the-giants-causeway" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Giants Causeway</h3>
 
-<p>Northern Ireland's only UNESCO World Heritage-listed site, the Giant's Causeway is proof that Mother Nature provides the most dramatic tourist attractions. The natural wonder is comprised of around 40,000 polygonal basalt rock columns, formed by the ancient volcanic landscape and stretching along the coastline like a series of gigantic stepping stones. A Giants Causeway Day Trip from Belfast is one of the country's most popular excursions, with visitors taking the unique opportunity to walk one of nature's most peculiar pathways.</p>
+<p>Northern Ireland's only UNESCO World Heritage-listed site, the Giant's Causeway is proof that Mother Nature provides the most dramatic tourist attractions. The natural wonder is comprised of around 40,000 polygonal basalt rock columns, formed by the ancient volcanic landscape and stretching along the coastline like a series of gigantic stepping stones. </p>
 <div>
   </section>
   <div class="footer">
