--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
        <ul>
       <li><a href="https://www.google.co.uk/maps?q=ireland&um=1&ie=UTF-8&sa=X&ved=0ahUKEwjusLqzv63LAhWkDZoKHbBmDy8Q_AUIBygB">Map Of Ireland</a></li>
       <li><a href="#">Top Ten Destinstions</a></li>
+       <form action="action_page.php">
+        <h5>Sign up to our newsletter to get weekly updates or recent news</h5>
+  First name:<br>
+  <input type="text" name="Email" value="Email"><br> Last name:<br><input type="text" name="Password" value="Password"><br><br> <input type="submit" value="Sign up">
+</form>
     </ul>
     </section>
 
