--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
    <div class="first show-description">
       <h3>
-<a id="irish-desitination" class="anchor" href="#irish-desitination" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Achill Island.</h3>
+<a id="irish-desitination" class="anchor" href="#irish-desitination" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Achill Island</h3>
 
 <p>Achill Island lies off County Mayo on the west coast of the Republic of Ireland. Marked by rugged mountains and peat bogs, the island is known for its tall sea cliffs and clean beaches. Its breezy shoreline makes it a popular spot for water sports. The strand (beach) at Keem Bay inspired visiting writers Heinrich Böll and Graham Greene. Keel, the island's main village, has a sandy surf beach</p>
 
